force-app/main/default/objects/Compound_Interest__c/fields/Formula_To_Calculate_CI__c.field-meta.xml
<CustomField>
    <fullName>Formula_To_Calculate_CI__c</fullName>
    <label>Formula To Calculate CI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>