force-app/main/default/objects/Compound_Interest__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>